<resources>
    <string name="app_name">Horario</string>
    <string name="back">Zurück</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="newEventTabText">Tab_1</string>
    <string name="calendarTabText">Tab_2</string>
    <string name="settingTabText">Tab_3</string>
    <string name="calendar">calendar</string>
    <string name="settings_text">Einstellungen</string>
    <string name="support_text">Support</string>
    <string name="copyright_text">Impressum</string>
    <string name="feedback_zur_app_text">Feedback zur App</string>
    <string name="phoneNumber">Telefonnummer :</string>
    <string name="phoneNumberHint">Telefonnummer</string>
    <string name="username_text">Benutzername :</string>
    <string name="allowpush_text">Erinnerungen erlauben :</string>
    <string name="reminder_text">Erinnerungen :</string>
    <string name="minutesBefore_text">Minuten vorher</string>
    <string-array name="start_tab">
        <item name="overview">Terminübersicht</item>
        <item name="calendar">Kalenderansicht</item>
        <item name="settings">Einstellungen</item>
    </string-array>
    <string-array name="push_times">
        <item name="push_time_0">0</item>
        <item name="push_time_5">5</item>
        <item name="push_time_15">15</item>
        <item name="push_time_30">30</item>
        <item name="push_time_60">60</item>
        <item name="push_time_90">90</item>
        <item name="push_time_120">120</item>
    </string-array>
    <string name="event_repetition">Wiederholungshäufigkeit</string>
    <string name="newEvent">Termin anlegen</string>
    <string name="event_Description">Beschreibung :</string>
    <string name="event_date">Datum :\u0020</string>
    <string name="event_startTime">Startzeit :</string>
    <string name="event_endtime">Endzeit :</string>
    <string name="event_serialEvent">Serientermin</string>
    <string name="event_endOfRepetition">Wiederholen bis :</string>
    <string name="event_save">Termin speichern</string>
    <string name="event_room">Raum :</string>
    <string name="event_shortTitle">Kurztitel :\u0020</string>
    <string name="empty_fields">Bitte fülle alle Felder aus.</string>
    <string name="endTime_before_startTime">Die Endzeit darf nicht vor der Startzeit liegen.</string>
    <string name="endOfRepetition_before_endTime">Das Enddatum der Wiederholung darf nicht vor der Endzeit liegen.</string>
    <string-array name="event_repetitions">
        <item name="event_repetition_yearly">jährlich</item>
        <item name="event_repetition_monthly">monatlich</item>
        <item name="event_repetition_weekly">wöchentlich</item>
        <item name="event_repetition_daily">täglich</item>
    </string-array>
    <string name="titleParticipantsEvent">Rückmeldungen</string>
    <string name="notificationParticipantsBeingFetched">SMS werden ausgelesen...</string>
    <string name="participantsUpdated">Teilnehmerlisten wurden aktualisiert.</string>
    <string name="appointmentIsFrom">Termin von </string>
    <string name="yourAppointment">Dein Termin </string>
    <string name="furtherDetails">Weitere Details</string>
    <string name="accept">Ja!</string>
    <string name="reject">Nein!</string>
    <string name="reject_event_button">Termin absagen</string>
    <string-array name="reason_for_rejection">
        <item name="reason_0">Entschuldigt</item>
        <item name="reason_1">Krank entschuldigt</item>
        <item name="reason_2">Krank unentschuldigt</item>
        <item name="reason_3">Paralleltermin</item>
        <item name="reason_4">Privater Termin</item>
        <item name="reason_5">Zeitlich verhindert</item>
        <item name="reason_6">Sonstiges</item>
    </string-array>
    <string name="show_Response">Rückmeldungen anzeigen</string>
    <string name="share_with">Teilen via</string>
    <string name="on">Am\u0020</string>
    <string name="find">\u0020findet\u0020</string>
    <string name="from">von\u0020</string>
    <string name="clock_at_room">\u0020Uhr in Raum\u0020</string>
    <string name="organizer">Organisator:\u0020</string>
    <string name="eventDetails">Termindetails:\u0020</string>
    <string name="at">\u0020um\u0020</string>
    <string name="instead_of">\u0020statt.</string>
    <string name="as_of">Vom\u0020</string>
    <string name="until">\u0020bis\u0020</string>
    <string name="clock_to">\u0020Uhr bis\u0020</string>
    <string name="your_Event">Dein Termin</string>
    <string name="room">Raum:\u0020</string>
    <string name="yourself">Du</string>
    <string name="yearly">jährlich</string>
    <string name="monthly">monatlich</string>
    <string name="weekly">wöchentlich</string>
    <string name="daily">täglich</string>
    <string name="without_repetition">ohne Wiederholung</string>
    <string name="ups_an_error">\u0020Ups! Fehler Aufgetreten!\u0020</string>
    <string name="toCalender">\u0020Zum Kalender\u0020</string>
    <string name="wrongQRCodeResult">Das ist der Inhalt des QR Codes:\u0020</string>
    <string name="notAsEventSaveable">Das kann leider nicht als Termin gespeichert werden!</string>
    <string name="back_where_user_comesFrom">Zur Übersicht</string>
    <string name="time">Zeit:\u0020</string>
    <string name="clock">\u0020Uhr</string>
    <string name="place">Ort:\u0020</string>
    <string name="titleDialogFinalDecission">Bist du sicher?</string>
    <string name="oneMoreTime">Nochmal</string>
    <string name="sendSMS_manual">manuell eingeben</string>
    <string name="username_hint">Benutzername</string>
    <string name="phoneNumber_hint">+49123456789</string>
    <string name="titleDialogUsername">Bitte vergib einen Benutzernamen! </string>
    <string name="titleDialogUsernamePhoneNumber">Bitte gib einen Benutzernamen und deine Telefonnummer ein! </string>
    <string name="event_saving_successful">Der Termin wurde gespeichert. Was möchtest du nun tun?</string>
    <string name="savingSuccessful_new">Weiteren Termin erstellen</string>
    <string name="savingSuccessful_qrcode">QRCode anzeigen</string>
    <string name="refuseAppointment">Termin ablehnen</string>
    <string name="acceptAppointment">Termin zusagen</string>
    <string name="event_save_notSuccessful">Der Termin wurde nicht gespeichert.</string>
    <string name="titleDialogRejectEvent">Willst du den Termin wirklich absagen?</string>
    <string name="titleDialogSaveEvent">Willst du dem Termin wirklich zusagen?</string>
    <string name="eventSave">Termin zusagen</string>
    <string name="eventSaveWithoutAssign">Termin ohne Zusage speichern</string>
    <string name="eventReject">Termin ablehnen</string>
    <string name="scannerOverlayer_qrCodeScan">Termincode scannen</string>
    <string name="scannerOverlay_positionYourScanner">Halte dein Smartphone vor den QR-Code und</string>
    <string name="scannerOverlay_toShowTheEvent">scanne ihn ab um den Termin zu öffnen.</string>
    <string name="requestPermission_thankYou">Danke für die Zugriffsrechte auf die Kamera!</string>
    <string name="requestPermission_askForPermission">Wir brauchen den Kamerazugriff um den QR-Code einzuscannen.</string>
    <string name="requestPermission_askForPermission_sendSMS">Wir müssen SMS verschicken, um den Ersteller zu benachrichtigen.</string>
    <string name="requestPermission_askForSMSPermission">Wir brauchen den SMS-Zugriff um die Teilnehmerlisten zu füllen und aktualisieren.</string>
    <string name="requestPermission_askForContactsPermission">Wir brauchen den Kontakte-Zugriff um die Teilnehmerlisten mit gespeicherten Kontaktnamen zu füllen und aktualisieren.</string>
    <string name="requestPermission_againButton">Nochmal</string>
    <string name="requestPermission_lastTryRequest">Letzter Versuch!</string>
    <string name="abort">ABBRUCH</string>
    <string name="setting_copyright_privacyPolicy">Privacy Policy</string>
    <string name="accessWith_NeverAskAgain_deny">Zugriff verweigert</string>
    <string name="requestPermission_accessDenied_withCheckbox">Du hast mit dem Haken bei \"Nicht mehr fragen\"
        dauerhaft den Zugriff zum Kalender verweigert. Um den QR Scanner zu nutzen aktiviere bitte den
        Kamerazugriff über deine Rechteverwaltung.</string>
    <string name="requestSMSPermission_accessDenied_withCheckbox">Du hast mit dem Haken bei \"Nicht mehr fragen\"  dauerhaft den Zugiff zu den SMS verweigert. Um Rückmeldungen zu nutzen aktiviere bitte den Lesezugriff über deine Rechteverwaltung.</string>
    <string name="requestContactPermission_accessDenied_withCheckbox">Du hast mit dem Haken bei \"Nicht mehr fragen\"  dauerhaft den Zugiff zu den Kontakten verweigert. Um Rückmeldungen mit Kontaktnamen zu nutzen aktiviere bitte den Lesezugriff über deine Rechteverwaltung.</string>
    <string name="requestPermission_accessDenied_withCheckbox_SendSMS">Du hast mit dem Haken bei \"Nicht mehr fragen\"
        dauerhaft den Zugriff zum Kalender verweigert. Um den QR Scanner zu nutzen aktiviere bitte das SMS Senden über deine Rechteverwaltung.</string>
    <string name="requestPermission_firstTryRequest">Erster von zwei Versuchen</string>
    <string name="qrGenerator_button_showInEventOverView">In Terminübersicht anzeigen</string>
    <string name="thanksForUsername">Benutzername wurde gespeichert. </string>
    <string name="telephonenumerNotRead">Deine Telefonnummer konnte leider nicht ausgelesen werden. Bitte trage sie hier ein. Bitte achte darauf, dass du die Telefonnummer richtig einträgst, da du sonst keine Rückmeldungen erhältst.</string>
    <string name="thanksphoneNumber">Deine Telefonnummer wurde gespeichert.</string>
    <string name="lastTry_phoneNumber">Ohne deine Telefonnummer kannnst du keine Rückmeldungen versenden und empfangen.</string>
    <string name="sendSMS_accessDenied_withCheckbox">Du hast mit dem Haken bei \"Nicht mehr fragen\"  dauerhaft den Zugiff auf deine Telefonnummer verweigert. Um Rückmeldungen zu nutzen, gib bitte nun deine Telefonnummer selbst ein. Alternativ kannst du Horario schließen und über deine Rechteverwaltung Horario das Senden von SMS erlauben. Dann gehen allerdings alle nicht gespeicherten Eingaben verloren.</string>
    <string name="sendSMS_lastTry">Bitte erlaube den Zugriff auf die Telefonnummer!</string>
    <string name="eventIsInDatabase">Termin ist schon gespeichert!</string>
    <string name="eventIsInDatabaseRejected">Termin muss erst abgesagt werden!</string>
    <string name="username_empty">Bitte gib einen Benutzernamen ein.</string>
    <string name="description_too_long">Die Beschreibung darf nicht länger als 200 Zeichen sein.</string>
    <string name="reject_event_hint">Der Termin wurde abgesagt.</string>
    <string name="accept_event_hint">Den Terminen wurde zugesagt.</string>
    <string name="startTime_afterScanning_past">Der Termin hat schon in der Vergangenheit stattgefunden.</string>
    <string name="save_event">Der Termin wurde gespeichert.</string>
    <string name="phoneNumber_explanation">Wir brauchen deine Telefonnummer, um Rückmeldungen versenden zu können. Wir verwenden deine Telefonnummer nicht für andere Zwecke. Alternativ kannst du deine Telefonnummer auch selbst eingeben.</string>
    <string name="wrongNumberFormat">Bitte gib eine gültige Nummer mit Ländervorwahl, Nationaler Vorwahl und Anschlusskennung an.</string>
    <string name="reject_event_reason_free_text_field_empty">Die Beschreibung darf nicht mit einem Leerzeichen anfangen.</string>
    <string name="reject_event_reason_free_text_field_to_long">Die Beschreibung darf nicht mehr als 100 Zeichen sein.</string>
    <string name="reject_event_reason_contains_comma">Die Beschreibung darf kein "," enthalten.</string>
    <string name="reject_event_reason">Bitte wähle einen Absagegrund und gebe eine Begründung ein.</string>
    <string name="shortTitle_too_long">Der Kurztitel darf nicht länger als 50 Zeichen sein.</string>
    <string name="startTab">Start-Tab :</string>
</resources>