<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_relativeLayout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_settings_textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/settings_settings_textView_settings"
        android:layout_marginTop="99dp"
        android:text="@string/username_text" />

    <TextView
        android:id="@+id/settings_settings_textView_allowPush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/settings_settings_textView_username"
        android:layout_marginTop="201dp"
        android:text="@string/allowpush_text" />

    <TextView
        android:id="@+id/settings_settings_textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/settings_text"
        android:textColor="#96ab63"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settings_settings_textView_minutesBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/settings_settings_spinner_minutes"
        android:layout_alignEnd="@id/settings_settings_spinner_minutes"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settings_settings_spinner_minutes"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="15dp"
        android:text="@string/minutesBefore_text" />

    <EditText
        android:id="@+id/settings_settings_editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settings_settings_textView_username"

        android:layout_marginTop="-19dp"
        android:ems="7"
        android:hint="@string/username_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true" />

    <Switch
        android:id="@+id/settings_settings_Switch_allowPush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/settings_settings_textView_allowPush"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/ic_launcher_background" />

    <Spinner
        android:id="@+id/settings_settings_spinner_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignTop="@+id/settings_settings_textView_reminder"
        android:layout_toStartOf="@+id/settings_settings_Switch_allowPush"
        android:entries="@array/push_times"
        android:prompt="@string/calendar"
        android:visibility="visible" />

    <TextView
        android:id="@+id/settings_settings_textView_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/settings_settings_textView_settings"
        android:layout_below="@id/settings_settings_textView_allowPush"

        android:layout_marginTop="35dp"

        android:text="@string/reminder_text" />

    <TextView
        android:id="@+id/settings_settings_textView_startTab"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignStart="@+id/settings_settings_textView_username"
        android:layout_below="@id/settings_settings_textView_reminder"
        android:layout_marginTop="35dp"

        android:text="@string/startTab" />

    <Spinner
        android:id="@+id/settings_settings_spinner_startTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/settings_settings_textView_startTab"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settings_settings_textView_startTab"
        android:entries="@array/start_tab" />

    <TextView
        android:id="@+id/settings_settings_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/settings_settings_textView_username"
        android:layout_marginTop="143dp"
        android:text="@string/phoneNumber" />

    <EditText
        android:id="@+id/settings_settings_editText_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/settings_settings_editText_username"
        android:ems="7"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone" />

</RelativeLayout>