<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_relativeLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/settings_relativeLayout_helper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/settings_relativeLayout_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/settings_button_feedback"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/settings_button_copyright"
            android:layout_below="@+id/settings_button_copyright"
            android:layout_marginTop="138dp"
            android:text="@string/feedback_zur_app_text" />

        <Button
            android:id="@+id/settings_button_support"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/settings_button_copyright"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp"
            android:text="@string/support_text" />

        <Button
            android:id="@+id/settings_button_copyright"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/settings_button_support"
            android:layout_centerVertical="true"
            android:text="@string/copyright_text" />

        <Button
            android:id="@+id/settings_button_settings"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/settings_button_support"
            android:layout_alignStart="@+id/settings_button_support"
            android:layout_marginBottom="58dp"
            android:text="@string/settings_text" />
    </RelativeLayout>
</RelativeLayout>