<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/settings_button_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_button_copyright"
        android:background="@drawable/button_border"
        android:drawableLeft="@mipmap/ic_launcher_foregraound2"
        android:paddingLeft="5dp"
        android:shape="rectangle"
        android:text="@string/feedback_zur_app_text"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_button_support"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_button_settings"
        android:background="@drawable/button_border"
        android:drawableLeft="@mipmap/ic_info_black2"
        android:paddingLeft="5dp"
        android:shape="rectangle"
        android:text="@string/support_text"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_button_copyright"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_button_support"
        android:background="@drawable/button_border"
        android:drawableLeft="@mipmap/ic_gavel_black2"
        android:paddingLeft="5dp"
        android:shape="rectangle"
        android:text="@string/copyright_text"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_button_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_border"
        android:drawableLeft="@mipmap/ic_setting_black2"
        android:paddingLeft="5dp"
        android:text="@string/settings_text"
        android:textAlignment="textStart"
        android:textSize="18sp" />

</RelativeLayout>